--- a/my_aubo_i5_robot_config/CMakeLists.txt
+++ b/my_aubo_i5_robot_config/CMakeLists.txt
@@ -1,1 +1,14 @@
-cmake_minimum_required(VERSION 2.8.
+cmake_minimum_required(VERSION 2.8.3)
+project(my_aubo_i5_robot_config)
+add_compile_options(-std=c++11)
+
+find_package(Eigen3 REQUIRED)
+
+# Eigen 3.2 (Wily) only provides EIGEN3_INCLUDE_DIR, not EIGEN3_INCLUDE_DIRS
+if(NOT EIGEN3_INCLUDE_DIRS)
+  set(EIGEN3_INCLUDE_DIRS ${EIGEN3_INCLUDE_DIR})
+endif()
+find_package(PCL 1.9 REQUIRED)
+
+
+find_package(c
