--- a/my_aubo_i5_robot_config/CMakeLists.txt
+++ b/my_aubo_i5_robot_config/CMakeLists.txt
@@ -11,4 +11,23 @@ endif()
 find_package(PCL 1.9 REQUIRED)
 
 
-find_package(c
+find_package(catkin REQUIRED COMPONENTS 
+  interactive_markers
+  moveit_core
+  moveit_visual_tools
+  moveit_ros_planning
+  moveit_ros_planning_interface
+  pluginlib
+  geometric_shapes
+  pcl_ros
+  gpd_ros
+  pcl_conversions
+  rosbag
+  tf2_ros
+  tf2_eigen
+  darknet_ros_msgs
+  tf2_geometry_msgs
+  roscpp
+  rospy
+  std_msgs
+  messa
