--- a/my_aubo_i5_robot_config/CMakeLists.txt
+++ b/my_aubo_i5_robot_config/CMakeLists.txt
@@ -50,4 +50,11 @@ catkin_package(
 )
 
 include_directories(${catkin_INCLUDE_DIRS})
-##cat
+##catkin_package()
+find_package(Boost REQUIRED system filesystem date_time thread)
+add_executable(pick_place src/pick_place.cpp)
+target_link_libraries(pick_place ${catkin_LIBRARIES} ${Boost_LIBRARIES})
+
+include_directories(${PCL_INCLUDE_DIRS})
+link_directories(${PCL_LIBRARY_DIRS})
+add_definitions
