--- a/my_aubo_i5_robot_config/CMakeLists.txt
+++ b/my_aubo_i5_robot_config/CMakeLists.txt
@@ -64,4 +64,10 @@ target_link_libraries (pass_through ${catkin_LIBRARIES} ${PCL_LIBRARIES})
 
 include_directories(SYSTEM ${THIS_PACKAGE_INCLUDE_DIRS} ${Boost_INCLUDE_DIR} ${EIGEN3_INCLUDE_DIRS})
 include_directories(${catkin_INCLUDE_DIRS})
-link_director
+link_directories(${catkin_LIBRARY_DIRS})
+
+install(TARGETS pick_place DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
+
+install(DIRECTORY launch DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+  PATTERN "setup_assistant.launch" EXCLUDE)
+install(DIRECTORY config DESTINATION ${CATKIN_PACKAGE_S
