--- a/my_aubo_i5_robot_config/CMakeLists.txt
+++ b/my_aubo_i5_robot_config/CMakeLists.txt
@@ -78,4 +78,7 @@ install(DIRECTORY config DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
 ##add_subdirectory(/home/nicholasward2/catkin_ws/src/moveit_tutorials/doc/planning_scene)
 ##add_subdirectory(/home/nicholasward2/catkin_ws/src/moveit_tutorials/doc/planning_scene_ros_api)
 ##add_subdirectory(/home/nicholasward2/catkin_ws/src/moveit_tutorials/doc/motion_planning_api)
-##add_subdirectory(/
+##add_subdirectory(/home/nicholasward2/catkin_ws/src/moveit_tutorials/doc/motion_planning_pipeline)
+##add_subdirectory(/home/nicholasward2/catkin_ws/src/moveit_tutorials/doc/visualizing_collisions)
+##add_subdirectory(/home/nicholasward2/catkin_ws/src/moveit_tutorials/doc/move_group_interface)
+##add
