add more instructions

--- a/my_aubo_i5_robot_config/CMakeLists.txt
+++ b/my_aubo_i5_robot_config/CMakeLists.txt
@@ -81,4 +81,7 @@ install(DIRECTORY config DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
 ##add_subdirectory(/home/nicholasward2/catkin_ws/src/moveit_tutorials/doc/motion_planning_pipeline)
 ##add_subdirectory(/home/nicholasward2/catkin_ws/src/moveit_tutorials/doc/visualizing_collisions)
 ##add_subdirectory(/home/nicholasward2/catkin_ws/src/moveit_tutorials/doc/move_group_interface)
-##add
+##add_subdirectory(/home/nicholasward2/catkin_ws/src/moveit_tutorials/doc/move_group_python_interface)
+##add_subdirectory(/home/nicholasward2/catkin_ws/src/moveit_tutorials/doc/state_display)
+##add_subdirectory(/home/nicholasward2/catkin_ws/src/moveit_tutorials/doc/interactivity)
+##add_subdirecto
