--- a/my_aubo_i5_robot_config/config/controllers.yaml
+++ b/my_aubo_i5_robot_config/config/controllers.yaml
@@ -10,3 +10,12 @@ controller_list:
       - foreArm_joint
       - wrist1_joint
       - wrist2_joint
+      - wrist3_joint
+ - name: gripper_controller
+   action_ns: follow_joint_trajectory
+   type: FollowJointTrajectory
+   default: true
+   parallel: true
+   joints:
+     - gripper_finger1_joint
+     - gripper_finger2_joint
