--- a/my_aubo_i5_robot_config/config/joint_limits.yaml
+++ b/my_aubo_i5_robot_config/config/joint_limits.yaml
@@ -14,3 +14,15 @@ joint_limits:
     max_acceleration: 0
   gripper_finger2_joint:
     has_velocity_limits: true
+    max_velocity: 100
+    has_acceleration_limits: false
+    max_acceleration: 0
+  shoulder_joint:
+    has_velocity_limits: false
+    max_velocity: 0
+    has_acceleration_limits: false
+    max_acceleration: 0
+  upperArm_joint:
+    has_velocity_limits: false
+    max_velocity: 0
+    has_a
