fix missing semicolon

--- a/my_aubo_i5_robot_config/config/joint_limits.yaml
+++ b/my_aubo_i5_robot_config/config/joint_limits.yaml
@@ -25,4 +25,16 @@ joint_limits:
   upperArm_joint:
     has_velocity_limits: false
     max_velocity: 0
-    has_a
+    has_acceleration_limits: false
+    max_acceleration: 0
+  wrist1_joint:
+    has_velocity_limits: false
+    max_velocity: 0
+    has_acceleration_limits: false
+    max_acceleration: 0
+  wrist2_joint:
+    has_velocity_limits: false
+    max_velocity: 0
+    has_acceleration_limits: false
+    max_acceleration: 0
+  wrist3_joint:
