--- a/my_aubo_i5_robot_config/config/ompl_planning.yaml
+++ b/my_aubo_i5_robot_config/config/ompl_planning.yaml
@@ -154,3 +154,26 @@ gripper:
   planner_configs:
     - SBL
     - EST
+    - LBKPIECE
+    - BKPIECE
+    - KPIECE
+    - RRT
+    - RRTConnect
+    - RRTstar
+    - TRRT
+    - PRM
+    - PRMstar
+    - FMT
+    - BFMT
+    - PDST
+    - STRIDE
+    - BiTRRT
+    - LBTRRT
+    - BiEST
+    - ProjEST
+    - LazyPRM
+    - LazyPRMstar
+    - SPARS
+    - SPARStwo
+  projection_evaluator: joints(gripper_finger1_joint,gripper_finger2_joint)
+  longest_valid_segment_fraction: 0.005
