--- a/my_aubo_i5_robot_config/config/ros_controllers.yaml
+++ b/my_aubo_i5_robot_config/config/ros_controllers.yaml
@@ -6,4 +6,17 @@ moveit_sim_hw_interface:
 # Settings for ros_control_boilerplate control loop
 generic_hw_control_loop:
   loop_hz: 300
-  cycle_time_error_threshold: 0.0
+  cycle_time_error_threshold: 0.01
+# Settings for ros_control hardware interface
+hardware_interface:
+  joints:
+    - shoulder_joint
+    - upperArm_joint
+    - foreArm_joint
+    - wrist1_joint
+    - wrist2_joint
+    - wrist3_joint
+    - gripper_finger1_joint
+    - gripper_finger2_joint
+
+  sim_control_mode: 1  # 0: position, 1: vel
