--- a/my_aubo_i5_robot_config/config/ros_controllers.yaml
+++ b/my_aubo_i5_robot_config/config/ros_controllers.yaml
@@ -19,4 +19,13 @@ hardware_interface:
     - gripper_finger1_joint
     - gripper_finger2_joint
 
-  sim_control_mode: 1  # 0: position, 1: vel
+  sim_control_mode: 1  # 0: position, 1: velocity
+# Publish all joint states
+# Creates the /joint_states topic necessary in ROS
+joint_state_controller:
+  type: joint_state_controller/JointStateController
+  publish_rate: 50
+controller_list:
+  - name: aubo_i5_controller
+    action_ns: follow_joint_trajectory
+    default: True
