--- a/my_aubo_i5_robot_config/config/ros_controllers.yaml
+++ b/my_aubo_i5_robot_config/config/ros_controllers.yaml
@@ -29,3 +29,15 @@ controller_list:
   - name: aubo_i5_controller
     action_ns: follow_joint_trajectory
     default: True
+    type: FollowJointTrajectory
+    joints:
+      - shoulder_joint
+      - upperArm_joint
+      - foreArm_joint
+      - wrist1_joint
+      - wrist2_joint
+      - wrist3_joint
+  - name: gripper_controller
+    action_ns: follow_joint_trajectory
+    default: True
+    type: follow_joint_trajectory
