--- a/my_aubo_i5_robot_config/config/ros_controllers.yaml
+++ b/my_aubo_i5_robot_config/config/ros_controllers.yaml
@@ -41,3 +41,6 @@ controller_list:
     action_ns: follow_joint_trajectory
     default: True
     type: follow_joint_trajectory
+    joints:
+      - gripper_finger1_joint
+      - gripper_finger2_joint
